--- a/OrderStatusPage.xaml
+++ b/OrderStatusPage.xaml
@@ -4,12 +4,12 @@
       Title="Статус заказов">
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="20">
         <TextBlock Text="Статус заказов" FontSize="24" FontWeight="Bold" Margin="0,0,0,20" />
-        <ListView Width="400" Height="200" Margin="0,0,0,20">
+        <ListView x:Name="OrdersListView" Width="400" Height="200" Margin="0,0,0,20">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Номер заказа" Width="120" />
-                    <GridViewColumn Header="Статус" Width="200" />
-                    <GridViewColumn Header="Дата" Width="80" />
+                    <GridViewColumn Header="Номер заказа" DisplayMemberBinding="{Binding OrderId}" Width="120" />
+                    <GridViewColumn Header="Статус" DisplayMemberBinding="{Binding Status}" Width="200" />
+                    <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding OrderDate}" Width="120" />
                 </GridView>
             </ListView.View>
         </ListView>
